- two functions are now created:   one to extract R results and one to extract the base data - functions recongize the demensions of the dataset, functions work up to four "demensions". As far I know MAGNET results are not presented a higher dimension than four

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ Config/testthat/edition: 3
 Imports: 
     magrittr,
     dplyr,
-    HARr
+    HARr,
+    tidyr
 Remotes: 
     github::USDA-ERS/MTED-HARr@HEAD
