--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Imports:
     HARr,
     tidyr,
     utils,
-    reshape2
+    reshape2,
+    readxl
 Remotes: 
     github::USDA-ERS/MTED-HARr@HEAD
 VignetteBuilder: knitr
