--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,11 @@
 
 export(magnet_base)
 export(magnet_indicator)
+export(magnet_read_all_headers)
 export(magnet_scenario)
 export(magnet_scenario_support)
+export(magnet_write_har)
+export(mergescendata)
+export(readscenarioandbase)
+export(readscenariofile)
 importFrom(magrittr,"%>%")
